--- a/yt/index.html
+++ b/yt/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web-based YouTube Downloader websites</title>
+    <title>Grabhub</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
@@ -103,7 +103,7 @@
                         </div>
                         <!--end of col-->
                         <div class="col">
-                            <input id="txt_url" class="form-control form-control-lg" type="text" placeholder="請貼上YouTube影片網址">
+                            <input id="txt_url" class="form-control form-control-lg" type="text" placeholder="Paste the fucking link here you bitch ass beal...">
                         </div>
                         <!--end of col-->
                         <div class="col-auto">
