--- a/yt/index.html
+++ b/yt/index.html
@@ -107,7 +107,7 @@
                         </div>
                         <!--end of col-->
                         <div class="col-auto">
-                            <button id="btn_fetch" class="btn btn-lg btn-success" type="button">查詢</button>
+                            <button id="btn_fetch" class="btn btn-lg btn-success" type="button">Nut!</button>
                         </div>
                         <!--end of col-->
                     </div>
