--- a/yt/index.html
+++ b/yt/index.html
@@ -120,9 +120,9 @@
             <thead class="thead-dark">
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">影片格式</th>
+                <th scope="col">Governmental Body:</th>
                 <th scope="col">itag</th>
-                <th scope="col">影片網址</th>
+                <th scope="col">Firefox is the best browser</th>
               </tr>
             </thead>
             <tbody id="video-lists"></tbody>
