--- a/yt/index.html
+++ b/yt/index.html
@@ -93,7 +93,7 @@
 <body>
     <main role="main" class="flex-shrink-0">
         <div class="container">
-          <h1 class="mt-5">Web YouTube Downloader</h1>
+          <h1 class="mt-5">Grabhub</h1>
           <div class="row justify-content-left">
             <div class="col-12 col-md-12 col-lg-12">
                 <form class="card card-sm">
