--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 	<br>
     	<br>
 	<h3>Utilities</h3>
+	<a href="https://github.com/iv-org/documentation/blob/master/Invidious-Instances.md">Open list of YouTube Unblocked Frontends</a>
+	<br>
     	<a href="https://yuck.ga/videos.html">Open <b>Yuck</b><i>Tube</i></a>
     	<br>
     	<a href="https://yuck.ga/c/index.html">Open <b>Yucky</b> Calc</a>
