--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<br>
     	<br>
 	<h3>Utilities</h3>
-	<a href="https://github.com/iv-org/documentation/blob/master/Invidious-Instances.md">>>>>>Open list of YouTube Unblocked Frontends<<<<<</a>
+	<a href="https://github.com/iv-org/documentation/blob/master/Invidious-Instances.md">>>>>>Open list of YouTube Unblocked Frontends<<<<<< -- WE DON'T NEED DOWNLOADERS ANYMORE!!! FULL BROWSING + SUBSCRIPTIONS ARE NOW POSSIBLE!!!/a>
 	<br>
     	<a href="https://yuck.ga/videos.html">Open <b>Yuck</b><i>Tube</i></a>
     	<br>
