--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	</script>
 	<!--/DPDC-->
 	</div><!--Dayspedia.com widget ENDS-->
-	<iframe src="https://wheeldecide.com/e.php?c1=minecraft+minecraft%2C&c2=all+i+wanna+do&c3=is+play+it+all+night&c4=the+creeper+try+and+kill+but+im+alright&time=5" width="50" height="50" scrolling="no" frameborder="0"></iframe>
+	<iframe src="https://wheeldecide.com/e.php?c1=minecraft+minecraft%2C&c2=all+i+wanna+do&c3=is+play+it+all+night&c4=the+creeper+try+and+kill+but+im+alright&time=5" width="25o" height="250" scrolling="no" frameborder="0"></iframe>
     <h3>Yucky Games</h3>  
     	<a href="https://yuck.ga/f/index.html">Play <b>Yucky</b> Bird</a>
     	<br>
