--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="e621.css">
   </head>
   <body>
-    <h1>YUCKGA!
-	  Creators FREDDIE AND BERTIE BEAL THE SECOND</h1>
+    <h1>YUCKGA! WHEN REEVES IS A DUM DUM IDIOT GODAMN FOOL SO DUM IDIOT IDIOT</h1>
 	<iframe src="https://wheeldecide.com/e.php?c1=minecraft+minecraft%2C&c2=all+i+wanna+do&c3=is+play+it+all+night&c4=the+creeper+try+and+kill+but+im+alright&time=5" width="350" height="350" scrolling="no" frameborder="0"></iframe>
     <h3>Yucky Games</h3>  
     	<a href="https://yuck.ga/f/index.html">Play <b>Yucky</b> Bird</a>
