--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="e621.css">
   </head>
   <body>
-    <h1>YUCKGA! WHEN REEVES IS A DUM DUM IDIOT GODAMN FOOL SO DUM IDIOT IDIOT</h1>
+    <h1>YUCKGA! WHEN REEVES IS A DUM DUM IDIOT GOSHAMN FOOL SO DUM IDIOT IDIOT</h1>
 	<iframe src="https://wheeldecide.com/e.php?c1=minecraft+minecraft%2C&c2=all+i+wanna+do&c3=is+play+it+all+night&c4=the+creeper+try+and+kill+but+im+alright&time=5" width="320" height="320" scrolling="no" frameborder="0"></iframe>
     <h3>Yucky Games</h3>  
     	<a href="https://yuck.ga/f/index.html">Play <b>Yucky</b> Bird</a>
@@ -82,7 +82,7 @@
     	<br>
     	<p>21 and 69 are coming for the world to seeeeee</p>
     	<p>I am sorry but your mom has been caught on my website
-		co creator BERTIE;
+		BERTIE;
     <br>
     <div style="font-size:1rem; display: flex; align-items: center; justify-content: center;">Made with <img style="margin: 0.15rem;" src="/c/heart.png">by<a style="text-decoration: none; color: #f1c40f; margin-left: 0.25rem;"
                 target="_blank" href="https://e621.net">Small Willy C</a></div>
