--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="e621.css">
   </head>
   <body>
-    <h1>YUCKGA! WHEN REEVES IS A DUM DUM IDIOT GOSHAMN FOOL SO DUM IDIOT IDIOT</h1>
+    <h1>YUCKGA! WHEN REEVES IS A DUM DUM IDIOT GOSHDAMN FOOL SO DUM IDIOT IDIOT</h1>
 	<iframe src="https://wheeldecide.com/e.php?c1=minecraft+minecraft%2C&c2=all+i+wanna+do&c3=is+play+it+all+night&c4=the+creeper+try+and+kill+but+im+alright&time=5" width="320" height="320" scrolling="no" frameborder="0"></iframe>
     <h3>Yucky Games</h3>  
     	<a href="https://yuck.ga/f/index.html">Play <b>Yucky</b> Bird</a>
@@ -80,7 +80,9 @@
     	<br>
     	<p>No Has Leaked :(  18th January 2022</p>
     	<br>
-    	<p>21 and 69 are coming for the world to seeeeee</p>
+        <p>The script of Somehow has been spoken of :) 6th February 2022</p>
+	<br>
+    	<p>21 and 69 are coming for the world to seeeee</p>
     	<p>I am sorry but your mom has been caught on my website
 		BERTIE;
     <br>
