--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   </head>
   <body>
     <h1>YUCKGA! WHEN REEVES IS A DUM DUM IDIOT GOSHDAMN FOOL SO DUM IDIOT IDIOT</h1>
-	<iframe src="https://wheeldecide.com/e.php?c1=minecraft+minecraft%2C&c2=all+i+wanna+do&c3=is+play+it+all+night&c4=the+creeper+try+and+kill+but+im+alright&time=5" width="320" height="320" scrolling="no" frameborder="0"></iframe>
+	<iframe src="https://phet.colorado.edu/sims/html/build-an-atom/latest/build-an-atom_en.html"
+        width="800"
+        height="600"
+        allowfullscreen>
+</iframe>
     <h3>Yucky Games</h3>  
     	<a href="https://yuck.ga/f/index.html">Play <b>Yucky</b> Bird</a>
     	<br>
