--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     	<a href="https://yuck.ga/videos.html">Open <b>Yuck</b><i>Tube</i></a>
     	<br>
     	<a href="https://yuck.ga/c/index.html">Open <b>Yucky</b> Calc</a>
+	<br>
+	<a href ="https://proxyninja.org">Proxyninja Unblocked Sites [I DO NOT CONDONE PIRACY]
     	<br>
     <h3>Games</h3>
     	<a href="https://yuck.ga/f2/index.html">Play <b>Flappy Bird</b></a>
