--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         height="720"
         allowfullscreen>
 </iframe>
-    <h3>Yucky Games</h3>  
+    <h3>Yucky Games</h3>
+	<a href="https://yuck.ga/games/phet/atom">Play PHET - Build an atom</a>
+	<br>
     	<a href="https://yuck.ga/f/index.html">Play <b>Yucky</b> Bird</a>
     	<br>
     	<a href="https://yuck.ga/p/index.html">Play <b>Yucky</b> Man</a>
