--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<br>
     	<br>
 	<h3>Utilities</h3>
-	<a href="https://yt.artemislena.eu/watch?v=PV4NGwn_xdI">>>>>>New Open YouTube UNBLOCKED<<<<<< -- FULL BROWSING + SUBSCRIPTIONS ARE NOW POSSIBLE!!!</a>
+	<a href="https://e621.net">>>>>>NEW LINK IS CONFIDENTIAL, COME TO ME AND ASK FOR LINK!!</a>
 	<br>
     	<a href="https://yuck.ga/videos.html">Open <b>Yuck</b><i>Tube</i></a>
     	<br>
