--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="e621.css">
   </head>
   <body>
-    <h1>YUCKGA! WHEN REEVES IS A DUM DUM IDIOT GOSHDAMN FOOL SO DUM IDIOT IDIOT</h1>
+    <h1>yuck.ga</h1>
 	<iframe src="https://phet.colorado.edu/sims/html/build-an-atom/latest/build-an-atom_en.html"
         width="1280"
         height="720"
