--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YUCKGA!</title>
+    <title>yuck</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/anime/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/anime/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/anime/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="e621.css">
+    <link rel="stylesheet" href="">
   </head>
   <body>
     <h1>yuck.ga</h1>
-</iframe>
     <h3>Yucky Games</h3>
 	<a href="https://yuck.ga/games/phet/atom">Play PHET - Build an atom</a>
 	<br>
