--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="">
   </head>
   <body>
-    <h1>yuck.ga</h1>
+    <h1>yuck.ga 2.0</h1>
     <h3>Yucky Games</h3>
 	<a href="https://yuck.ga/games/phet/atom">Play PHET - Build an atom</a>
 	<br>
